     READSTATUS to ERROR, which you can catch and handle separately.

Music On Hold Changes
---------------------
  * A new option, "digit", has been added for music on hold classes in 
     musiconhold.conf.  If this is set for a music on hold class, a caller
     listening to music on hold can press this digit to switch to listening
     to this music on hold class.

AEL Changes
-----------
  * AEL upgraded to use the Gosub with Arguments instead
     of Macro application, to hopefully reduce the problems
     seen with the artificially low stack ceiling that 
     Macro bumps into. Macros can only call other Macros
     to a depth of 7. Tests run using gosub, show depths
     limited only by virtual memory. A small test demonstrated
     recursive call depths of 100,000 without problems.
     -- in addition to this, all apps that allowed a macro
     to be called, as in Dial, queues, etc, are now allowing
     a gosub call in similar fashion.
  * AEL now generates LOCAL(argname) declarations when it
     Set()'s the each arg name to the value of ${ARG1}, ${ARG2),
     etc. That makes the arguments local in scope. The user
     can define their own local variables in macros, now,
     by saying "local myvar=someval;"  or using Set() in this
     fashion:  Set(LOCAL(myvar)=someval);  ("local" is now
     an AEL keyword).
  * utils/conf2ael introduced. Will convert an extensions.conf
    file into extensions.ael. Very crude and unfinished, but 
    will be improved as time goes by. Should be useful for a
    first pass at conversion.
  * aelparse will now read extensions.conf to see if a referenced
    macro or context is there before issueing a warning.

Zaptel channel driver (chan_zap) Changes
----------------------------------------
  * SS7 support in chan_zap (via libss7 library)
  * In India, some carriers transmit CID via dtmf. Some code has been added
    that will handle some situations. The cidstart=polarity_IN choice has been added for